# KARTON3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  setup.bat  vcpkg.json
karton/: CMakeLists.txt  karton.cpp  karton.h
karton/include/rendering/lighting/: light.h
karton/include/utils/: filemanager.h
